# tall_tale

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  build.yml  cd.yml  rust.yml  template_values.toml
crates/raconteur_derive/: Cargo.toml
docs/: brainstorm_description.md  description.txt  old_beat_draft.txt
docs/uml/: test.uml
example_game/: Cargo.toml
examples/: minimal.rs
src/: constraint.rs  context.rs  entity.rs  instruction.rs  lib.rs  main.rs  narrative_world.rs  property.rs  query.rs  raconteur.rs  relationship.rs  scenario.rs  scenario_action.rs  scenario_graph.rs  schema.rs  story_beat.rs  story_graph.rs  story_node.rs  story_world.rs
tests/: basics.rs  basics_graph.rs  complex_graph.rs  queries.rs  raconteur.rs  story_graph.rs
tests/resources/: schema_wishful_thinking.ron  story_beats_wishful_thinking.ron
