[package]
name = "raconteur"
version = "0.1.0"
edition = "2021"
description = "A dynamic storytelling library."
repository = "https://github.com/imberny/raconteur"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13"
once_cell = "1.19"
petgraph = { version = "0.6", features = ["serde-1"] }
regex = "1.11"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
